[Win] DRT does not seem to reset the 'UsesPageCache' setting between tests https://bugs.webkit.org/show_bug.cgi?id=143779

Reviewed by Brent Fulgham.

Reset the 'UsesPageCache' setting to FALSE between tests on Windows,
similarly to what is done on Mac / WK1. Without this, PageCache could
stay enabled after page cache tests and cause weird behaviors.

* DumpRenderTree/win/DumpRenderTree.cpp:
(resetWebPreferencesToConsistentValues):

Canonical link: https://commits.webkit.org/161789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182844 268f45cc-cd09-0410-ab3c-d52691b4dbfc